; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/fxp/extr_if_fxp.c_fxp_watchdog.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/fxp/extr_if_fxp.c_fxp_watchdog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fxp_softc = type { i64, i32, i32 }

@MA_OWNED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"device timeout\0A\00", align 1
@IFCOUNTER_OERRORS = common dso_local global i32 0, align 4
@IFF_DRV_RUNNING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fxp_softc*)* @fxp_watchdog to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fxp_watchdog(%struct.fxp_softc* %0) #0 {
  %2 = alloca %struct.fxp_softc*, align 8
  %3 = alloca i32, align 4
  store %struct.fxp_softc* %0, %struct.fxp_softc** %2, align 8
  %4 = load %struct.fxp_softc*, %struct.fxp_softc** %2, align 8
  %5 = getelementptr inbounds %struct.fxp_softc, %struct.fxp_softc* %4, i32 0, i32 2
  %6 = load i32, i32* %5, align 4
  store i32 %6, i32* %3, align 4
  %7 = load %struct.fxp_softc*, %struct.fxp_softc** %2, align 8
  %8 = load i32, i32* @MA_OWNED, align 4
  %9 = call i32 @FXP_LOCK_ASSERT(%struct.fxp_softc* %7, i32 %8)
  %10 = load %struct.fxp_softc*, %struct.fxp_softc** %2, align 8
  %11 = getelementptr inbounds %struct.fxp_softc, %struct.fxp_softc* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %20, label %14

14:                                               ; preds = %1
  %15 = load %struct.fxp_softc*, %struct.fxp_softc** %2, align 8
  %16 = getelementptr inbounds %struct.fxp_softc, %struct.fxp_softc* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = add nsw i64 %17, -1
  store i64 %18, i64* %16, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %14, %1
  br label %34

21:                                               ; preds = %14
  %22 = load %struct.fxp_softc*, %struct.fxp_softc** %2, align 8
  %23 = getelementptr inbounds %struct.fxp_softc, %struct.fxp_softc* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 8
  %25 = call i32 @device_printf(i32 %24, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %26 = load i32, i32* %3, align 4
  %27 = load i32, i32* @IFCOUNTER_OERRORS, align 4
  %28 = call i32 @if_inc_counter(i32 %26, i32 %27, i32 1)
  %29 = load i32, i32* %3, align 4
  %30 = load i32, i32* @IFF_DRV_RUNNING, align 4
  %31 = call i32 @if_setdrvflagbits(i32 %29, i32 0, i32 %30)
  %32 = load %struct.fxp_softc*, %struct.fxp_softc** %2, align 8
  %33 = call i32 @fxp_init_body(%struct.fxp_softc* %32, i32 1)
  br label %34

34:                                               ; preds = %21, %20
  ret void
}

declare dso_local i32 @FXP_LOCK_ASSERT(%struct.fxp_softc*, i32) #1

declare dso_local i32 @device_printf(i32, i8*) #1

declare dso_local i32 @if_inc_counter(i32, i32, i32) #1

declare dso_local i32 @if_setdrvflagbits(i32, i32, i32) #1

declare dso_local i32 @fxp_init_body(%struct.fxp_softc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
